# parallel_testing_cpp

./: CMakeLists.txt  LICENSE  README.md  input_data.cpp  input_data.h  main.cpp  matrix.cpp  matrix.h  output_data.cpp  output_data.h  par_for.cpp  par_for.h  random.cpp  random.h
